Fixed width of input field on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,8 @@
 #ocsEndPoint {
 	margin-bottom: 10px;
 }
+
+#monitoring-endpoint-url {
+	width: 80%;
+	max-width: 415px;
+}
